# CHIP8Emulator_CPP

./: CMakeLists.txt  README.md
include/Headers/: instructions.h
src/: chip8  chip8.cpp  instructions.cpp  test2.cpp
